--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "laravel/framework": "5.1.1"
+        "laravel/framework": "5.1.*"
     },
     "autoload": {
         "psr-4": {
